# conversion

./: CMakeLists.txt  LICENSE  README.md
cmake/: main.cmake
doc/: conf.bat  conf.sh
include/conversion/: number_convert.h  number_properties.h  number_recognizer.h  numbers.h  strto.h
src/: CMakeLists.txt  number_converter.cpp
test/: CMakeLists.txt  convert_num.cpp  convert_to_tests.cpp  converter_base_tests.cpp  converter_float_tests.cpp  converter_int_tests.cpp  converter_tests.cpp  recognizer_empty_tests.cpp  recognizer_error_tests.cpp  recognizer_float_tests.cpp  recognizer_int_tests.cpp  recognizer_tests.cpp  recognizer_zero_exp_tests.cpp  recognizer_zero_float_tests.cpp  recognizer_zero_int_tests.cpp  strtofloat_tests.cpp  strtoint_tests.cpp  test_runner.cpp
